# VoxInk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude/: settings.json
.claude/skills/ui-verify/: SKILL.md  ui-shot.ps1
.github/workflows/: release.yml
docs/: IDEAS.md  PRD.md
examples/: try_asr.rs
locales/: app.yaml
src/: app.rs  assets.rs  autolaunch.rs  config.rs  diagnostics.rs  i18n.rs  main.rs  mini.rs  session.rs  settings.rs  single_instance.rs  state.rs  theme.rs  tray.rs  update.rs
src/asr/: client.rs  config.rs  error.rs  mod.rs  oss.rs  registry.rs  traits.rs  websocket.rs
src/asr/backends/: bailian_filetrans.rs  bailian_offline.rs  bailian_streaming.rs  generic_ws.rs  mod.rs  qwen3_asr_selfhosted.rs
src/audio/: buffer.rs  capture.rs  chunk_sender.rs  import.rs  mod.rs  player.rs  resample.rs  writer.rs
src/branding/: draw.rs  mod.rs
src/history/: db.rs  mod.rs  panel.rs
src/hotkey/: mod.rs
src/polish/: mod.rs
