[package]
name = "VoxInk"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# GUI 渲染框架（§1.4）
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# 异步运行时（§1.4）
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "time"] }

# ASR 网络层（§1.4，M4）。rustls-tls：纯 Rust TLS，跨平台无需 OpenSSL/C 工具链。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
serde_json = "1"

# 阿里云 OSS V1 签名（M4 混合：filetrans 大文件需先上传 OSS）。纯 Rust HMAC-SHA1。
hmac = "0.12"
sha1 = "0.10"

# 配置与序列化（§1.4）
serde = { version = "1", features = ["derive"] }

# 日志（M1 任务 1.3）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理（§1.4）
thiserror = "2"
anyhow = "1"

# 日期时间（§1.4）
chrono = { version = "0.4.44", features = ["std", "serde"] }

# 配置持久化（§2.7, §8）
toml = "0.8"
directories = "6"

# 剪贴板（§4.3.2，任务 2.2）
arboard = "3"

# API Key 加密：纯 Rust，AES-256-GCM + HKDF（§8.3，任务 2.4）。不使用 ring。
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
machine-uid = "0.5"

# 音频采集管线（§1.4，M3）
cpal = "0.16"
hound = "3"
rubato = "0.16"
ringbuf = "0.4"

# 系统集成（§1.4，M5）
tray-icon = "0.21"
auto-launch = "0.5"

[target.'cfg(windows)'.dependencies]
# 窗口隐藏到托盘需直接调用 Win32 ShowWindow（gpui 在 Windows 上不公开 hide/minimize）。
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
# 从 gpui Window 取 HWND。
raw-window-handle = "0.6"

[build-dependencies]
winresource = "0.1.31"
