[package]
name = "VoxInk"
version = "0.2.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# GUI 渲染框架（§1.4）
# 必须与 gpui-component 锁定同一 zed rev，否则依赖图出现两份 gpui 导致类型不兼容（见 §3 读源码再写）。
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "7b3b5321f8d25d370f7f23e15c104c4a08431f16" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "7b3b5321f8d25d370f7f23e15c104c4a08431f16" }

# 异步运行时（§1.4）
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }

# ASR 网络层（§1.4，M4）。rustls-tls：纯 Rust TLS，跨平台无需 OpenSSL/C 工具链。
# `stream` 启用 bytes_stream，用于自动更新下载进度（纯 Rust，依赖已有 futures-util）。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
async-trait = "0.1"
serde_json = "1"

# 版本检查与自动更新（M13）。语义化版本比较，纯 Rust。
semver = "1"

# 实时流式 ASR（§1.4，M6）。WebSocket，rustls 纯 Rust TLS。
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

# 阿里云 OSS V1 签名（M4 混合：filetrans 大文件需先上传 OSS）。纯 Rust HMAC-SHA1。
hmac = "0.12"
sha1 = "0.10"

# 配置与序列化（§1.4）
serde = { version = "1", features = ["derive"] }

# 日志（M1 任务 1.3）。文件日志：rolling-file 纯 Rust，按天 + 单文件大小双触发滚动；
# tracing-appender 提供非阻塞写入 worker（官方 tokio-rs，纯 Rust）。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rolling-file = "0.2"

# 错误处理（§1.4）
thiserror = "2"
anyhow = "1"

# 日期时间（§1.4）
chrono = { version = "0.4", features = ["std", "serde"] }

# 配置持久化（§2.7, §8）
toml = "0.8"
directories = "6"

# 剪贴板（§4.3.2，任务 2.2）
arboard = "3"

# API Key 加密：纯 Rust，AES-256-GCM + HKDF（§8.3，任务 2.4）。不使用 ring。
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
machine-uid = "0.5"

# 音频采集管线（§1.4，M3）
cpal = "0.16"
hound = "3"
rubato = "0.16"
ringbuf = "0.4"
# 应用内音频回放（片段试听）。纯 Rust（基于 cpal）。`wav` 特性走 hound（项目已依赖，
# 零 C），启用后用 rodio 流式 Decoder 边读边解，内存恒定——避免大文件（10 小时录音
# 上限约 1.15GB）全量解码进内存。`mp3` 特性（基于 symphonia，纯 Rust）支持导入的 mp3 回放（M14）。
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3"] }
# 外部导入音频的时长探测（M14）。纯 Rust，仅启用 mp3 解码（wav 时长用已依赖的 hound 读取）。
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }

# 品牌图标程序化绘制（纯 Rust 抗锯齿矢量光栅；无 C 依赖）。
tiny-skia = "0.11"

# 系统集成（§1.4，M5）
tray-icon = "0.21"
auto-launch = "0.5"

# 全局快捷键（§1.4，M9）。Tauri 团队维护，跨平台系统级热键。
global-hotkey = "0.8"

# 本地历史数据库（§1.4/§2.8，M10）。bundled 自带编译期启用 FTS5（含 trigram 分词器，
# 用于中文子串全文检索）的 SQLite，无需系统 sqlite/C 依赖。
rusqlite = { version = "0.40", features = ["bundled"] }
rust-i18n = "4.1.0"

[target.'cfg(windows)'.dependencies]
# 窗口隐藏到托盘需直接调用 Win32 ShowWindow（gpui 在 Windows 上不公开 hide/minimize）；
# 一键复制并粘贴需 SendInput 模拟 Ctrl+V（M9，Win32_UI_Input_KeyboardAndMouse）。
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    # 任务栏状态角标（ITaskbarList3）+ 由 RGBA 造 HICON（GDI）。
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    # 单实例限制：命名互斥量 CreateMutexW（System_Threading）+ 其 SECURITY_ATTRIBUTES 形参（Security）。
    "Win32_System_Threading",
    "Win32_Security",
] }
# 从 gpui Window 取 HWND。
raw-window-handle = "0.6"

[build-dependencies]
winresource = "0.1"
# 编译期程序化生成多尺寸 .ico + 主界面 logo.png（纯 Rust）。
tiny-skia = "0.11"
ico = "0.4"
png = "0.17"
